# shogi-vision

./: .gitignore  README.md  agent.md  pyproject.toml
shogi_vision/: __init__.py  board_detector.py  cell_segmenter.py  cli.py  debug.py  piece_classifier.py  pieces.py  pipeline.py  synthetic.py
tests/: conftest.py  test_auto_classifier.py  test_board_detector.py  test_cell_segmenter.py  test_classifier.py  test_cli.py  test_orientation.py  test_pieces.py  test_pipeline.py  test_synthetic_pretty.py
